Documentación de Markowitz, frontera eficiente y Sharpe ratio en memoria

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -488,6 +488,30 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 22-Abr-2024},
 }
 
+@ARTICLE{2020SciPy-NMeth,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2},
+}
+
 @misc{ online:keras,
   	author = {François Chollet y desarrolladores de Google},
   	title = {\emph{Keras}},
@@ -554,8 +578,83 @@ journal = {Neural Comput.},
 
 @misc{ online:mendeley,
   	author = {Elsevier},
-  	title = {\emph{Draw.io}},
+  	title = {\emph{Mendeley}},
   	year = {2024},
   	howpublished = {\url{https://www.mendeley.com/}},
   	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:mpt,
+  	author = {Wikipedia},
+  	title = {\emph{Teoría del portafolio moderna}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Teor%C3%ADa_del_portafolio_moderna}},
+  	note = {Online; Accedido el 15-May-2024},
+}
+
+@misc{ wiki:posicion_corta,
+  	author = {Wikipedia},
+  	title = {\emph{Posición corta}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Posici%C3%B3n_corta}},
+  	note = {Online; Accedido el 15-May-2024},
+}
+
+@misc{ wiki:matriz_covarianza,
+  	author = {Wikipedia},
+  	title = {\emph{Matriz de covarianza}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Matriz_de_covarianza}},
+  	note = {Online; Accedido el 15-May-2024},
+}
+
+@misc{ wiki:covarianza_correlacion,
+  	author = {Wikipedia},
+  	title = {\emph{Covariance and correlation}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Covariance_and_correlation}},
+  	note = {Online; Accedido el 16-May-2024},
+}
+
+@misc{ online:simulacion_montecarlo,
+  	author = {José Francisco López},
+  	title = {\emph{Simulación de Montecarlo}},
+  	year = {2020},
+  	howpublished = {\url{https://economipedia.com/definiciones/simulacion-de-montecarlo.html}},
+  	note = {Online; Accedido el 16-May-2024},
+}
+
+@misc{ wiki:programacion_lineal,
+  	author = {Wikipedia},
+  	title = {\emph{Programación lineal}},
+  	year = {2020},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Programaci%C3%B3n_lineal}},
+  	note = {Online; Accedido el 16-May-2024},
+}
+
+@misc{ wiki:frontera_eficiente,
+  	author = {Wikipedia},
+  	title = {\emph{Efficient frontier}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Efficient_frontier}},
+  	note = {Online; Accedido el 17-May-2024},
+}
+
+@book{ book:Portfolio_selection,
+	title = {Portfolio selection. Efficient diversification of investments },
+    isbn = {0300013728},
+    abstract = {Revolutionized modern finance by introducing the concept of portfolio theory. Markowitz's work laid the foundation for understanding risk and return in investment portfolios, emphasizing the importance of diversification to optimize returns while managing risk. This seminal work remains a cornerstone in the field of finance, guiding investors and financial professionals in constructing well-balanced portfolios for long-term success.},
+    language = {English},
+    publisher = {Cowles Foundation},
+    author = {Markowitz, Harry},
+    edition = {1st},
+    year = {1959},
+}
+
+@misc{ wiki:sharpe_ratio,
+  	author = {Wikipedia},
+  	title = {\emph{Ratio de Sharpe}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Ratio_de_Sharpe}},
+  	note = {Online; Accedido el 17-May-2024},
 }
