--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -535,7 +535,7 @@ Django, SQLite, financial analysis, news and RSS, investment portfolio, time ser
 \end{figure}
 
 \begin{center}
-Este obra está bajo una licencia Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional\\
+Esta obra está bajo una licencia Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional\\
 (\href{https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1}{CC BY-NC-SA 4.0 DEED}).
 \end{center}
 \end{bottompar}
