--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -56,7 +56,7 @@ de la presentación de los datos (la vista en MVC).
 Una de las ventajas de \emph{Django} es que este modelo está plenamente integrado y promueve un acoplamiento 
 débil, lo que facilita el mantenimiento y la escalabilidad de una aplicación. 
 
-\imagen{img_01_django_MVT.png}{Patrón MVT. Fuente: realización propia}{1}
+\imagen{img_02_django_MVT.png}{Patrón MVT. Fuente: realización propia}{1}
 
 
 
@@ -325,6 +325,11 @@ la integración de noticias en una aplicación. Es un servicio web que proporcio
 \subsection{Scikit-learn}\label{scikit-learn}
 
 \emph{Scikit-learn} \citep{online:scikit_learn} es una bilioteca de código abierto para el aprendizaje automático en \emph{Python}. Se utiliza frecuentemente para clasificación de datos, regresión, agrupación y reducción de dimensionalidad. Sin embargo, en este trabajo se utiliza sólo para calcular el \emph{MSE} (Mean Squared Error) entre datos de test y predicciones de modelos y para normalizar datos en una escala concreta.  
+
+
+\subsection{Scipy}\label{scipy}
+
+\emph{Scipy} \citep{2020SciPy-NMeth} SciPy es una biblioteca de código abierto de \emph{Python} que se utiliza comúnmente en cálculo científico y ciencia de datos. Proporciona módulos para resolver problemas matemáticos, científicos, de ingeniería y técnicos. En este trabajo se utiliza para resolver problemas de programación cuadrática y lineal. 
 
 \subsection{Keras}\label{keras}
 
