--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -658,3 +658,19 @@ journal = {Neural Comput.},
   	howpublished = {\url{https://es.wikipedia.org/wiki/Ratio_de_Sharpe}},
   	note = {Online; Accedido el 17-May-2024},
 }
+
+@misc{ wiki:estacionalidad,
+  	author = {Wikipedia},
+  	title = {\emph{Estacionalidad}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Estacionalidad}},
+  	note = {Online; Accedido el 18-May-2024},
+}
+
+@misc{ wiki:paseo_aleatorio,
+  	author = {Wikipedia},
+  	title = {\emph{Camino aleatorio}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Camino_aleatorio}},
+  	note = {Online; Accedido el 18-May-2024},
+}
